--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>Tugas 2</title></head>
+<head>
+ <link rel="stylesheet" href="CSS1.css">
+ <title>Tugas 3</title>
+ </head>
 <body>
  <h1>BIODATA</h1>
  <img src="Haha.jpeg" alt="BIO" width=150 height=225>
