--- a/index.html
+++ b/index.html
@@ -32,27 +32,26 @@
  <tr>
  <td>Hobby</td>
  <td>:</td> <td><ol>
- <li>Mendengerkan Musik</li>
+ <li>Mendengarkan Musik</li>
  <li>Bermain Game</li>
  <li>Menonton Film</li>
  </ol></td>
  </tr>
  </table>
- <h3>Pengalaman pembelajaran jarak jauh</h3>
- <p>PJJ pada masa pandemi saat ini dimulai pada awal bulan maret 2020.<br>
- Awal-awal saya mengira bahwa belajar dari rumah itu menyenangkan, dan<br> 
+ <h3>Pengalaman Pembelajaran Jarak Jauh</h3>
+ <p>PJJ pada masa pandemi dimulai pada awal bulan maret 2020.<br>
+ Awalnya saya mengira bahwa belajar dari rumah itu menyenangkan, dan<br> 
  kenyataannya jauh lebih menyenangkan dari yang saya kira. Karena saya<br>
  bisa belajar sambil rebahan dirumah, dan juga dalam suasana santai jadi<br>
  sekolah tidak terlalu terasa berat. Tetapi ada satu hal yang membuat <br>
- sekolah jarak jauh ini sangatlah berat, yaitu PR yang tidak ada habisnya.<br>
- Karena sudah dapat dipastikan setiap hari itu pasti ada PR, kadang hanya<br>
- dapat satu tetapi kadang juga dapat lebih dari dua PR dalam sehari. Ditambah<br>
- lagi, setiap minggu pasti ada lapsus yang dapat memutar balikkan otak</p>
- <p>Tapi selebihnya, sistem BPR ini menurut saya lebih mudah dibanding sistem tatap muka.<br>
+ sekolah jarak jauh ini sangatlah berat, yaitu tugas sekolah yang tidak ada habisnya.<br>
+ Karena sudah dapat dipastikan setiap hari itu pasti ada tugas, kadang hanya<br>
+ satu tetapi kadang juga dapat dua atau lebih tugas dalam sehari. Ditambah<br>
+ lagi, setiap minggu pasti ada lapsus yang harus dikumpulkan</p>
+ <p>Tapi selebihnya, sistem PJJ ini menurut saya lebih mudah dibanding sistem tatap muka.<br>
  ya walaupun ada rasa kangen juga sih dengan suasana kelas saat belajar, dan juga kangen<br>
  ketemu teman-teman disekolah. Tapi mau bagaimana lagi, jika masuk sekolah takut pulang-pulang<br>
- kena korona. Itu saja cerita yang ingin saya sampaikan tentang pengalaman belajar jarak jauh ini
-<br>
+ kena korona. Itu saja cerita yang ingin saya sampaikan tentang pengalaman belajar jarak jauh ini<br>
  Semoga korona cepat hilang ya, aamiin.
  </p>
 </body>
