--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <title>Tugas 3</title>
  </head>
 <body>
- <h1>BIODATA</h1>
+ <h1>TUGAS CSS</h1>
  <img src="Haha.jpeg" alt="BIO" width=150 height=225>
 <ol>
  <table style="width: 300px;">
